# neural-audio-spring-reverb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: jekyll.yml  test.yml
configs/kernel-3/: gcn-3.yaml  gru-3.yaml  lstm-3.yaml  tcn-3.yaml  wavenet-3.yaml
configs/kernel-99/: gcn-99.yaml  gru-99.yaml  lstm-99.yaml  tcn-99.yaml  wavenet-99.yaml
configs/legacy/: default.yaml  gcn-2500-kt-c2.yaml  gcn-tfilm.yaml  gru-32-c2-eg.yaml  gru-32-kt-c2.yaml  tcn-3200-c2-eg.yaml  tcn-3200-kt-c2.yaml  wavenet-10.yaml
configs/legacy/v04/: gcn-3250.yaml  gcn-4-32-16-33.yaml  gcn-4-32-16-99.yaml  gcn-4600.yaml  gcn-6-32-4-41.yaml  gcn-gru-tfilm-41.yaml  gcn-gru-tfilm-6-32-4-99.yaml  gcn-gru-tfilm-99.yaml  gcn-lstm-tfilm-6-32-4-41.yaml  gcn.yaml  (+5 more)
data/: README.md
data/features/: egfxset_wet.csv
docs/: Gemfile  _config.yml  about.md  index.md  resources.md
models/: GCN-3-springset-20251129-220036-48kHz.pt  GRU-3-springset-20251201-051505-48kHz.pt  LSTM-3-egfxset-20251125-003119-48kHz.pt  LSTM-3-egfxset-20251126-141304-48kHz.pt  LSTM-3-egfxset-20251202-021006-48kHz.pt  LSTM-3-egfxset-20251203-012135-48kHz.pt  LSTM-3-springset-20251115-191816-48kHz.pt  LSTM-3-springset-20251124-193919-48kHz.pt  LSTM-3-springset-20251129-014145-48kHz.pt  TCN-3-springset-20251127-002101-48kHz.pt  TCN-3-springset-20251127-012149-48kHz.pt  TCN-3-springset-20251127-013319-48kHz.pt  TCN-3-sprinset-20251128-002552-48kHz.pt  WaveNet-99-egfxset-20251124-222242-48kHz.pt  WaveNet-99-springset-20251201-170733-48kHz.pt
neutone_models/GCN/: metadata.json
neutone_models/GCN-3/: metadata.json
neutone_models/GCN-99/: metadata.json
neutone_models/GRU/: metadata.json  model.nm
neutone_models/LSTM/: metadata.json  model.nm
neutone_models/LSTM-3/: metadata.json  model.nm
neutone_models/TCN/: metadata.json
neutone_models/TCN-3/: metadata.json  model.nm
neutone_models/WaveNet/: metadata.json
neutone_models/WaveNet-99/: metadata.json  model.nm
notebooks/: 01_SpringSetAnalysis.ipynb  02_EgfxSetAnalysis.ipynb  03_AudioFeaturesEssentiaStreaming.ipynb  04_FeatureVisualization.ipynb  06_subset_generator.ipynb  README.md  neutone_GCN_demo.ipynb
scripts/: eval.sh  impulse_response.sh  rt60.sh  rtf.sh  train_all_configs.sh  wrap.sh
src/neural_audio_spring_reverb/: __main__.py  eval.py  inference.py  rtf.py  train.py  wrapper.py
wandb/: latest-run
wandb/run-20250302_204639-ms42v1xf/: run-ms42v1xf.wandb
(+99 files in other folders)
